# pyb-data-contracts

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README-MonMaya.md  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  presentation.md  pyproject.toml  requirements.txt  test.html
contracts/customer-domain/: customer_events.yaml  customer_profile.yaml  customer_profile_events.yaml  order_events.yaml
data/bronze/: .gitignore
docs/: 04-architecture-patterns.md
docs/articles/: 02-structure-et-contenu.md  05-mise-en-oeuvre.md  06-gouvernance-et-adoption.md
docs/en/articles/: 01-fundamentals.md  02-problematiques-et-solutions.md  02-structure-and-content.md  02-structure-and-governance.md  03-workflow-and-versioning.md  04-architecture-construction.md  04-architecture-patterns.md  04-patterns-architecture.md  05-architecture-operationnelle.md  05-implementation.md  06-cycle-de-vie.md  06-governance-and-adoption.md  06-lifecycle.md  07-gouvernance-et-adoption.md  07-governance-and-adoption.md  07-lifecycle.md  08-implementation.md
examples/: circuit_breaker.py  contract_registry.py  proactive_monitoring.py
governance/: coe_config.yaml  workflow.py
migrations/: V1_to_V2_customer_profile.sql
scripts/: generate_fake_data.py  generate_sample_data.py
sql/bronze/: customer_events.sql  raw_customer_events.sql
sql/gold/: customer_360.sql
sql/monitoring/: version_monitoring.sql
sql/silver/: customer_views.sql  unified_customer_view.sql
streamlit/: app.py
validation/: contract_tests.py  version_migration.py
(+25 files in other folders)
